# julea

./: meson.build  meson_options.txt
benchmark/: benchmark.c  message.c
ceph-container/: Dockerfile  entrypoint.sh  recreate-containter.sh
cli/: cli.c  copy.c
containers/: ubuntu-24.04  ubuntu-26.04
doc/: containers.md  static-analysis.md
fuse/: julea-fuse.c  read.c  write.c
report/: access.c_clang-tidy_05a3c02c3e5731c05a4b823d78976ef7.plist.err  access.c_clangsa_05a3c02c3e5731c05a4b823d78976ef7.plist.err  background-operation.c_clang-tidy_38be92e0a87d0765e5fedeb3c913a2e4.plist.err  background-operation.c_clang-tidy_8170632df53df0a36fd289a0245960e8.plist.err  background-operation.c_clang-tidy_9ffef0a0c4f179824f2ff2f9f0e9d736.plist.err  background-operation.c_clang-tidy_aa6e0622476fe7902e7a6a4f9cc77a20.plist.err  background-operation.c_clangsa_56a5c22610149467e6f34978d14fb99a.plist  background-operation.c_clangsa_8170632df53df0a36fd289a0245960e8.plist.err  background-operation.c_clangsa_aa6e0622476fe7902e7a6a4f9cc77a20.plist.err  batch.c_clang-tidy_18af7b278e055c9803eb80673173b0eb.plist  batch.c_clang-tidy_18af7b278e055c9803eb80673173b0eb.plist.err  batch.c_clang-tidy_d2ffa1bb7e5609a605940dec37c9a755.plist.err  batch.c_clangsa_18af7b278e055c9803eb80673173b0eb.plist.err  batch.c_clangsa_89cbb9f642682636b1db5742d825f680.plist  benchmark.c_clang-tidy_8bc9cd00fba723e7951024b789795381.plist.err  benchmark.c_clang-tidy_ce4fe27039ae2f8f1d1673408191da1a.plist  benchmark.c_clang-tidy_e00f56af5a5d8eecba25a370e6ed9418.plist  (+532 more)
reports_html/: index.html  statistics.html  (+27 more)
(+447 files in other folders)
