# FIXME Rename to meson.options once we require Meson >= 1.1
option('gdbm_prefix',
	type: 'string',
	value: '',
	description: 'Prefix for GDBM',
)

option('is_analysis_build',
    type: 'boolean',
    value: false,
    description: 'Should be true, when generating compile_commands.json for CodeChecker.'
)
